byte-code-compiler/test_files/typing/bad/testfile-unary_minus-1.psc
struct S { int_32 a; };
int_32 main() { struct S *s; -s; }

